# Ai-Learning-system

./: .env.example  .gitignore  CODEBASE_INTELLIGENCE_REPORT.md  README.md  TECH_STACK.md  opencli.md  planning.md  research.md
MultRAG System/: Multi_Rag.ipynb  app.js  (+3 more)
backend/: README.md  pyproject.toml  requirements.txt
backend/app/: __init__.py  main.py
backend/app/api/: __init__.py  dependencies.py
backend/app/api/routes/: chat.py  graph.py  health.py  source_guides.py  sources.py  system.py  workspaces.py
backend/app/api/schemas/: chat_schemas.py  error_schemas.py  graph_schemas.py  source_guide_schemas.py  source_schemas.py  workspace_schemas.py
backend/app/application/: __init__.py  rag_learning_system.py
backend/app/application/services/: citation_verifier.py  context_builder.py  query_planner.py
backend/app/application/use_cases/: ask_question.py  create_workspace.py  generate_source_guide.py  get_graph.py  ingest_sources.py
backend/app/domain/models/: __init__.py  answer.py  base.py  document_chunk.py  exceptions.py  graph.py  retrieval.py  source_document.py  workspace.py
backend/app/domain/ports/: __init__.py  cache_store.py  chunker.py  embedding_provider.py  generation_provider.py  graph_store.py  keyword_store.py  source_loader.py  vector_store.py  workspace_repository.py
backend/multi_rag_learning_system_backend.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
backend/tests/fixtures/: demo_notes.md
backend/tests/integration/: test_facade_flow.py  test_full_pipeline.py
backend/tests/unit/: test_chunking.py  test_retrieval_fusion.py
(+49 files in other folders)
