[project]
name = "multi-rag-learning-system-backend"
version = "0.1.0"
description = "A local-first multi-index RAG learning backend with citations, graph exploration, and provider adapters."
requires-python = ">=3.10"
dependencies = [
  "fastapi>=0.110",
  "uvicorn[standard]>=0.27",
  "python-multipart>=0.0.9",
  "pydantic>=2.6",
  "python-dotenv>=1.0",
]

[project.optional-dependencies]
rag = [
  "sentence-transformers>=2.6",
  "faiss-cpu>=1.8",
  "pymupdf>=1.24",
  "google-generativeai>=0.7",
]
test = [
  "pytest>=8.0",
  "httpx>=0.27",
]

[tool.pytest.ini_options]
pythonpath = ["."]
testpaths = ["tests"]

[tool.ruff]
line-length = 100
target-version = "py310"

